--- a/files/panlu.css
+++ b/files/panlu.css
@@ -22,6 +22,11 @@ i:hover {
   font-size: 32px;
 }
 
+body {
+  font-size: 18px; 
+  float: left; 
+  margin-left: 280px;
+}
 
 /* image border */
 img {
@@ -77,7 +82,7 @@ h3 {
   width: 80%;
   float: right;
   padding-top: 120px;
-  margin-right: -780px;
+  margin-right: -750px;
 }
 
 .twitter {
